# gifstream

./: .gitignore  Cargo.toml  readme.md
src/: gif.rs  lib.rs
