[package]
name = "gifstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
weezl = "0.1.7"
color_quant = "1.1.0"
async-stream = "0.3.5"
tokio = "1.32.0"


[dev-dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
image = { version = "0.24.4" }
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.29.1", features = ["full"] }

canvas = { git = "https://github.com/nathanielfernandes/canvas.git" }
